# ibm-jsonx

./: README.md  pyproject.toml
ibm_jsonx/: README.md  __init__.py  exceptions.py  from_json.py  to_json.py
tests/: test.json  test.xml  test_from_json.py  test_to_json.py
