[tool.poetry]
name = "ibm_jsonx"
version = "1.0.0"
description = "Convert data between JSON to IBM's JSONx format."
authors = ["Caleb <le717@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
